@@ -12,6 +12,11 @@ What's New in Python 2.3 alpha 2?
 Core and builtins
 -----------------
 
+- isinstance(x, X): if X is a new-style class, this is now equivalent
+  to issubclass(type(x), X) or issubclass(x.__class__, X).  Previously
+  only type(x) was tested.  (For classic classes this was already the
+  case.)
+
 - compile(), eval() and the exec statement now fully support source code
   passed as unicode strings.
 
